--- a/src/pkginterface/Counseling.form
+++ b/src/pkginterface/Counseling.form
@@ -162,6 +162,9 @@
       </Constraints>
     </Component>
     <Component class="javax.swing.JButton" name="Return">
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ReturnActionPerformed"/>
+      </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="10" y="390" width="250" height="50"/>
