--- a/src/pkginterface/Update_Menu.form
+++ b/src/pkginterface/Update_Menu.form
@@ -91,6 +91,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Counseling"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="CounselingActionPerformed"/>
+      </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="135" y="165" width="330" height="40"/>
